fix: detail pre, code tag style fixed on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -95,14 +95,13 @@
     color: #fff;
     background: #43454a;
     white-space: pre-wrap;
-    @media only screen and (max-width: 500px) {
-        position: relative;
-        left: -2rem;
-        width: 100vw;
+
+    @media only screen and (max-width: 600px) {
         margin: 1rem 0;
-        white-space: pre-wrap;
-        font-size: 0.8rem;
+        font-size: 0.5rem;
     }
+
+
 }
 
 .blog-post-content blockquote {
@@ -165,3 +164,4 @@
 .gallery-list-col > a:nth-of-type(17n+1) > img {
     scale: 1.2;
 }
+
